# playful-turtle-xiao

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  uf2conv.py
cmake/: README.md  arm-gcc-toolchain.cmake  utils.cmake
libs/rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
src/: descriptors.c  main.c  tusb_config.h
